dev: Widget Publication

--- a/static/scss/themes/common.scss
+++ b/static/scss/themes/common.scss
@@ -399,4 +399,8 @@ body {
   --line-height-text-sm: 20px;
   --line-height-display-xs: 32px;
   --line-height-text-md: 24px;
+//BTA-2.0
+  --colors-border-border-brand: #F5620F;
+  --colors-foreground-fg-brand-primary-500: #F5620F;
+  --colors-foreground-fg-quaternary-500: #727171;
 }
