--- a/static/app.css
+++ b/static/app.css
@@ -3572,6 +3572,7 @@ img.google-aspect-ratio {
   --colors-background-bg-success-primary: var(--colors-success-500);
   --colors-background-bg-success-secondary: var(--colors-success-600);
   --colors-background-bg-success-solid: var(--colors-success-600);
+  --colors-background-bg-main: #292929;
 }
 
 .light-mode {
@@ -4012,6 +4013,7 @@ img.google-aspect-ratio {
   --colors-background-bg-success-primary: var(--colors-success-50);
   --colors-background-bg-success-secondary: var(--colors-success-100);
   --colors-background-bg-success-solid: var(--colors-success-600);
+  --colors-background-bg-main: var(--colors-background-bg-primary, #FFF);
 }
 
 /*# sourceMappingURL=app.css.map */
