refactor: update custom button gray border color

--- a/static/scss/themes/dark.scss
+++ b/static/scss/themes/dark.scss
@@ -453,4 +453,5 @@
   --colors-background-bg-success-secondary: var(--colors-success-600);
   --colors-background-bg-success-solid: var(--colors-success-600);
   --colors-background-bg-main: #292929;
+--custom-button-gray-border: #737373;
 }
