--- a/static/scss/themes/light.scss
+++ b/static/scss/themes/light.scss
@@ -451,4 +451,5 @@
   --colors-background-bg-success-solid: var(--colors-success-600);
 
   --colors-background-bg-main: var(--colors-background-bg-primary, #FFF);
+--custom-button-gray-border: #E6E6E6
 }
