--- a/static/app.css
+++ b/static/app.css
@@ -3573,6 +3573,7 @@ img.google-aspect-ratio {
   --colors-background-bg-success-secondary: var(--colors-success-600);
   --colors-background-bg-success-solid: var(--colors-success-600);
   --colors-background-bg-main: #292929;
+  --custom-button-gray-border: #737373;
 }
 
 .light-mode {
@@ -4014,6 +4015,7 @@ img.google-aspect-ratio {
   --colors-background-bg-success-secondary: var(--colors-success-100);
   --colors-background-bg-success-solid: var(--colors-success-600);
   --colors-background-bg-main: var(--colors-background-bg-primary, #FFF);
+  --custom-button-gray-border: #E6E6E6 ;
 }
 
 /*# sourceMappingURL=app.css.map */
